--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,20 @@
 <HTML>
     <head>
         <title>HCI Project</title>
-        <script type="text/javascript" src="js/raphael.js"></script>
-        <script type="text/javascript" src="js/dracula_graffle.js"></script>
+
         <script type="text/javascript" src="js/jquery-1.8.2.js"></script>
-        <script type="text/javascript" src="js/dracula_graph.js"></script>
-        <script type="text/javascript" src="js/dracula_algorithms.js"></script>
+        <script type="text/javascript" src="js/jquery.jsPlumb-1.3.16-all.js"></script>
+        <script type="text/javascript" src="js/jquery-ui-1.10.2.custom.js"></script>
+
+        <script src="js/chosen/chosen.jquery.min.js" type="text/javascript"></script>
+
         <!-- This is the driver for the app -->
         <script type="text/javascript" src="js/app.js"></script>
+        
+        <link href="css/tree.css" rel="stylesheet" type="text/css" media="all">
+
         <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
+        <link rel="stylesheet" href="js/chosen/chosen.css" type="text/css" media="all"/>
     </head>
     <body>
         <header>
@@ -16,14 +22,71 @@
             <a href="about.html" alt="About HCI Project">About</a>
         </header>
         <section id="tree">
-            <select name="degree-select" id="degree-select"> 
-            </select>
-            <div id = "canvas">                
-            </div>            
+            <select name="degree-select" id="degree-select"> </select>
+            <div id = "container"> </div>
         </section>
-        <section id="course-info">
-            <h1 class="name">Class Name</h1>
-            <p class="description">Class description</p>
+        <section id="info">
+            <ul id="info-tabs">
+                <li id="course-tab">Course</li>
+                <li id="department-tab">Department</li>
+                <li id ="degree-tab">Degree</li>
+                <li id="help-tab" class="active">Help</li>
+            </ul>
+            <section id="course-section">
+                <select name="course-select" id="course-select"></select>
+                <div class="content"></div>
+            </section>
+            <section id="department-section">
+                <select name="department-select" id="department-select"></select>
+                <div class="content"></div>
+            </section>
+            <section id="degree-section">
+                <div class="content"></div>
+            </section>
+            <section id="help-section">
+                <h1>Hello!</h1>
+                <p>
+                    To begin please select a degree you would like to view from
+                    the menu at the top left of the page.
+                </p>
+                <p>
+                    You may view the currently selected course, department, and
+                    degree, as well as this help message from the tabs at the
+                    top of this pane. To change your current selections either
+                    click on the corresponding node in the tree view, or any
+                    of the corresponding links within the information pane.
+                </p>
+                <h2>Tree Pane</h2>
+                <p>
+                    The tree pane displays a tree of courses required for the
+                    degree selected from the degree select dropdown, located at
+                    the top of the pane. From within the tree pane you may select
+                    a course to view within the information pane, and mark courses
+                    as taken. Once a course has been marked as taken, the corresponding
+                    nodes and connections from that node will be highlighted to
+                    visually show your progress through the degree.
+                </p>
+                <h2>Information Pane</h2>
+                <h3>Courses Tab</h3>
+                <p>
+                    Within the course tab you will be able to find out everything
+                    about your selected course. You may also mark the course as
+                    taken by clicking the taken badge. By marking course you will
+                    be able to better see what courses you have taken at a
+                    glance.
+                </p>
+                <h3>Department Tab</h3>
+                <p>
+                    The department tab displays all the information about the
+                    selected department. You cann access the department website
+                    and browse directly to the department's offered courses.
+                </p>
+                <h3>Degree Tab</h3>
+                <p>
+                    The degree tab displays information of the currently selected
+                    degree.
+                </p>
+            </section>
         </section>
     </body>
 </HTML>
